tests/semantic/witness_check2/witness_check2.err
Error: Witness problem: argument grounded by an aggregator's inner scope is used ungrounded in outer scope in file witness_check2.dl at line 21
a(x,y) :- y = count : { c(x,_) }.
--^-------------------------------
Error: Witness problem: argument grounded by an aggregator's inner scope is used ungrounded in outer scope in file witness_check2.dl at line 24
a(x,y) :- b(x), y = max z : { !d(r), !e(m), c(x,z), m = sum j : { c(r,j) } }.
---------------------------------^--------------------------------------------
Error: Witness problem: argument grounded by an aggregator's inner scope is used ungrounded in outer scope in file witness_check2.dl at line 27
a(x,y) :- y = sum z : { c(z,m), m = count : { e(x) } }.
--^-----------------------------------------------------
Error: Witness problem: argument grounded by an aggregator's inner scope is used ungrounded in outer scope in file witness_check2.dl at line 30
a(x,y) :- b(x), x = sum z : { c(z,y), !c(y,m), z = sum j : { c(j,m) } }.
----^--------------------------------------------------------------------
Error: Witness problem: argument grounded by an aggregator's inner scope is used ungrounded in outer scope in file witness_check2.dl at line 30
a(x,y) :- b(x), x = sum z : { c(z,y), !c(y,m), z = sum j : { c(j,m) } }.
-------------------------------------------^-----------------------------
5 errors generated, evaluation aborted
